Remove not needed dependencies